--- a/credits.html
+++ b/credits.html
@@ -4,16 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Franklin Battle Heroes</title>
+    <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
-<style>
-    @font-face {
-        font-family: "code-font";
-        src: url("/home/brian/Downloads/Press_Start_2P/PressStart2P-Regular.ttf");
-    }
-    body {
-        background-color: #222222;
-    }
-</style>
 <body>
     
 </body>
