--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Franklin Battle Heroes</title>
+        <script src="index.js"></script>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
 
+        <h1>Franklin Battle Heroes</h1>
+        <nav>
+            <li><a href="play.html"><button id="play">Play</button></a></li>
+            <li><a href="select.html"><button id="select">Select Character</button></a></li>
+            <li><a href="credits.html"><button id="credits">Credits</button></a></li>
+        </nav>
+        
+    </body>
+</html>
