--- a/play.html
+++ b/play.html
@@ -1,21 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Franklin Battle Heroes</title>
-</head>
-<style>
-    @font-face {
-        font-family: "code-font";
-        src: url("/home/brian/Downloads/Press_Start_2P/PressStart2P-Regular.ttf");
-    }
-
-    body {
-        background-color: #222222;
-    }
-</style>
-<body>
-    
-</body>
+<html>
+    <head>
+        <title>Franklin Battle Heroes</title>
+        <script src="index.js"></script>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+            <div id="player-side" class="left">
+                <div class="topNav">
+                    <h2 class="fightTitle">You</h2>
+                </div>
+                <div>
+                    <img src="jacket_test.png" class="fighterImg">
+                </div>
+                <div>
+                    <select name="Attack", id="attack", class="selection">
+                        <option value="1">Attack 1</option>
+                        <option value="2">Attack 2</option>
+                        <option value="ability">Ability</option>
+                    </select>
+                </div>
+                <div>
+                    <button id="attack", class="fighterButton">Attack</button>
+                </div>
+            </div>
+            <div id="enemy-side" class="right">
+                <div class="topNav">
+                    <h2 class="fightTitle">Enemy</h2>
+                </div>
+            </div>
+    </body>
 </html>
