--- a/play.html
+++ b/play.html
@@ -2,22 +2,28 @@
 <html>
     <head>
         <title>Franklin Battle Heroes</title>
-        <script src="index.js"></script>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+            <div class="center">
+                <div class="topNavInfo">
+                    <h2 id="infoDisplay">Info</h2>
+                    <h2 id="abilityDisplay", class="abilityDisplay">Points</h2>
+                </div>
+            </div>
             <div id="player-side" class="left">
                 <div class="topNav">
-                    <h2 class="fightTitle">You</h2>
+                    <h2 class="fightTitle", id="playerName">You</h2>
+                    <h2 class="fightTitleSmall", id="playerHealth">100</h2>
                 </div>
                 <div>
                     <img src="jacket_test.png" class="fighterImg">
                 </div>
                 <div>
-                    <select name="Attack", id="attack", class="selection">
-                        <option value="1">Attack 1</option>
-                        <option value="2">Attack 2</option>
-                        <option value="ability">Ability</option>
+                    <select name="Attack", id="attackSelector", class="selection">
+                        <option value="1", id="option1">Attack 1</option>
+                        <option value="2", id="option2">Attack 2</option>
+                        <option value="ability", id="option3">Ability</option>
                     </select>
                 </div>
                 <div>
@@ -27,8 +33,10 @@
             <div id="enemy-side" class="right">
                 <div class="topNav">
                     <h2 class="fightTitle">Enemy</h2>
+                    <h2 class="fightTitleSmall", id="enemyHealth">100</h2>
                 </div>
             </div>
-
+        <script type="text/javascript" src="select.js"></script>
+        <script type="text/javascript" src="play.js"></script>
     </body>
 </html>
