render enemy jacket

--- a/play.html
+++ b/play.html
@@ -35,6 +35,9 @@
                     <h2 class="fightTitle">Enemy</h2>
                     <h2 class="fightTitleSmall", id="enemyHealth">100</h2>
                 </div>
+                <div>
+                    <img src="jacket_test.png" class="enemyImg">
+                </div>
             </div>
         <script type="text/javascript" src="select.js"></script>
         <script type="text/javascript" src="play.js"></script>
