added credits and copyright

--- a/credits.html
+++ b/credits.html
@@ -7,5 +7,12 @@
     </head>
     <body>
         <h2>Credits</h2>
+        <p> - Created 2024 as a project, Olathe Northwest Highschool Gifted Program</p>
+        <p> - Game Design by Owen Schmidt, Brian Moore, with input from Jett Cherry - </p>
+        <p> - Music and art created by Brian Moore, with input from Owen Schmidt - </p>
+        <p> - Programming by Owen Schmidt and Brian Moore - </p>
+        <p> - Web design by Owen Schmidt - </p>
+        <p> - We thank you for playing! - </p>
+        <p style="font-size: 12pt; margin-top: 215px;"> © 2024 Owen Schmidt and Brian Moore</p>
     </body>
 </html>
