--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             <li><a href="select.html"><button id="select">Select Character</button></a></li>
             <li><a href="credits.html"><button id="credits">Credits</button></a></li>
         </nav>
+
+        <p style="font-size: 12pt; margin-top: 215px;"> © 2024 Owen Schmidt and Brian Moore</p>
         
     </body>
 </html>
